# diffpype_claude

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CLAUDE.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.claude/context/: gemini_rules.md
.claude/skills/: assess_arch.md  gen_pr.md  gen_tests.md  log_issue.md  run_arch.md  strat_sesh.md
.github/workflows/: ci.yml
collab_scratch/: README.md
docker/: api.Dockerfile  db.Dockerfile  ui.Dockerfile  worker.Dockerfile
docker/db_init/: 01_create_test_db.sql
docs/: cli_guide.rst  conf.py  index.rst  prd.md  sphinx_requirements.txt  tech_debt.md
docs/architecture/: 01_system_architecture.md  02_walking_skeleton.md  03_developer_tooling.md  04_stage0_refinements.md  05_database_schema.md  06_api_and_worker_logic.md  07_frontend_ui.md  08_test_suite.md  09_devops_cli.md  10_infrastructure_hardening.md  11_service_layer_refactoring.md  12_pydantic_job_contracts.md  14_error_handling_and_logging.md  15_stage0_final_polish.md  16_generalized_cli_execution.md  17_cli_status_and_mirroring.md  18_observability_and_docs.md  19_user_auth_and_admin.md  20_security_and_access_control.md  21_worker_reliability.md  22_api_scalability.md  23_observability.md  24_devops_tooling.md  25_documentation_diagrams.md  26_domain_models.md  index.md
docs/diagrams/: index.md  infrastructure_topology.md
migrations/: env.py
migrations/versions/: 20260702_0001_initial_schema.py  20260702_0002_add_job_kwargs_to_dummy_images.py  20260706_0003_add_job_configurations.py  20260707_0004_add_observability_timestamps.py  20260707_0005_add_users_projects_and_provenance.py  20260708_0006_add_hashed_password_to_users.py  20260721_0007_add_domain_models.py
prototype/: LICENSE  README.md  Settings.public  config.json
prototype/djangotutorial/diffpype/: admin.py  apps.py  models.py  urls.py  views.py
prototype/djangotutorial/diffpype/migrations/: 0001_initial.py  0002_rename_poly_lvl3mosaic_moc_str.py
prototype/djangotutorial/diffpype/templates/: index.html
prototype/djangotutorial/mysite/: settings.py  urls.py
prototype/docker/: docker-compose.yml  public.env
prototype/docker/db_init/: init.sql
prototype/docker/db_init/db_configuration/: diffpype.cnf
prototype/docker/diffpype_worker/: Dockerfile  requirements_1.txt  requirements_2.txt
prototype/notebooks/: Dave_Prototype.ipynb  Hollis.ipynb  Massimo_Dave_Prototype.ipynb  NEXUS-DaveBB.ipynb  NEXUS.ipynb  dave_prototype_environment.yml  dave_prototype_requirements.txt  mast_query.ipynb
prototype/src/joust/: QueryInterface.py  joust.py  make_diffs.py  renameFITS.py
prototype/src/jwst_diff/: full_diff_multi.py  remstriping.py  reprocess2.py  source_match.py  utils.py
prototype/src/steps/: BkgSub.py  Executors.py  MASTQuery.py  Mosaic.py  OneOverF.py  WCSAlignment.py
prototype/src/test/: diff_test.py  renameFITS.py
prototype/src/workflow_manager/: data_repository.py  data_utils.py  visualization.py
src/: cli.py  conftest.py
src/api/: admin.py  main.py  schemas.py
src/api/routes/: jobs.py  meta.py
src/api/tests/: test_admin.py  test_cli.py  test_jobs.py  test_main.py  test_meta.py  test_schemas.py
src/core/: config.py  logger.py  tracing.py
src/core/tests/: test_config.py  test_docker_compose_prod.py  test_logger.py  test_tracing.py
src/db/: enums.py  models.py  seed.py  session.py
src/db/tests/: conftest.py  test_integration.py
src/services/: job_service.py
src/services/tests/: test_job_service.py
src/ui/: index.html  package.json
src/ui/src/: App.tsx  api.ts
src/ui/src/pages/: DashboardPage.tsx
src/worker/: base_task.py  celery_app.py  tasks.py  utils.py
src/worker/tests/: test_base_task.py  test_celery_app.py  test_tasks.py  test_utils.py
(+16 files in other folders)
