[project]
name = "diffpype"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "psycopg2-binary==2.9.9",
    "celery==5.4.0",
    "redis==5.0.8",
    "pydantic==2.9.2",
    "alembic==1.13.3",
    "healpix-alchemy==1.0.1",
    "structlog==24.4.0",
    "pydantic-settings==2.5.2",
]

[project.scripts]
diffpype-manage = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
test = [
    "pytest==8.3.3",
    "pytest-mock==3.14.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["src"]
