[project]
name = "diffpype"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "psycopg2-binary==2.9.9",
    "celery==5.4.0",
    "redis==5.0.8",
    "pydantic==2.9.2",
    "alembic==1.13.3",
    "healpix-alchemy==1.0.1",
    "structlog==24.4.0",
    "pydantic-settings==2.5.2",
    "tabulate==0.9.0",
    "sqladmin==0.18.0",
    "itsdangerous==2.2.0",
    "bcrypt==4.2.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "opentelemetry-instrumentation-sqlalchemy==0.48b0",
    "opentelemetry-instrumentation-celery==0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc==1.27.0",
    "prometheus-client==0.21.0",
    "starlette-exporter==0.23.0",
    # opentelemetry-instrumentation 0.48b0 imports pkg_resources, which setuptools
    # removed in 81+. Pin below that so the instrumentors can import.
    "setuptools<81",
]

[project.scripts]
diffpype-manage = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
test = [
    "pytest==8.3.3",
    "pytest-mock==3.14.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
    "myst-parser==4.0.0",
    "sphinx-rtd-theme==3.0.2",
    "pre-commit",
    "mypy",
    "sphinxcontrib-mermaid",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["src"]
filterwarnings = [
    "ignore:Please use `import python_multipart`:PendingDeprecationWarning",
    "ignore:'crypt' is deprecated:DeprecationWarning",
    "ignore:pkg_resources is deprecated as an API:UserWarning",
]

[tool.coverage.run]
omit = ["src/*/tests/*"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["^prototype/"]

[tool.ruff]
extend-exclude = ["prototype"]
